discussion/kv_engine/172850/172850_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51295: DcpTest from Lazy to Eager ckpt removal

Change-Id: Idacfe1e20ae3aab2872f5831118e93599db90e43

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-04-07 13:50:56.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-07 13:55:16.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19274/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19274/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18243/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18243/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18579/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18579/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26653/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26653/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17338/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6126/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6126/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6186/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6186/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16472/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:254:5: error: use of undeclared identifier "vb" [clang-diagnostic-error]
    vb->setState(vbucket_state_active, &meta);
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:267:15: error: use of undeclared identifier "vb" [clang-diagnostic-error]
              vb->commit(prepareToCommit->getKey(),
              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:270:26: error: use of undeclared identifier "vb" [clang-diagnostic-error]
                         vb->lockCollections(prepareToCommit->getKey()),
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:280:15: error: use of undeclared identifier "vb" [clang-diagnostic-error]
              vb->abort(prepareToAbort->getKey(),
              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:283:25: error: use of undeclared identifier "vb" [clang-diagnostic-error]
                        vb->lockCollections(prepareToAbort->getKey())));
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:289:58: error: use of undeclared identifier "vb" [clang-diagnostic-error]
    prepareCheckpointItemsForStep(producers, *producer, *vb);
                                                         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16472/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/dcp_stream_test.cc:254:5:
error: use of undeclared identifier "vb" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16472/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15407/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
